--- a/src/main.css
+++ b/src/main.css
@@ -22,7 +22,7 @@ h3 {
   margin: 10px 0;
 }
 
-button {
+.btn {
   width: 193px;
   height: 52px;
   border-radius: 15px;
@@ -76,12 +76,20 @@ button {
 
 .answer-btn {
   font-weight: 500;
+  font-family: "Inter", sans-serif;
+  color: #293264;
   display: inline-block;
   padding: 5px 15px;
   border: 1px solid #4d5b9e;
   border-radius: 8px;
   text-align: center;
   font-size: 12px;
+  outline: none;
+}
+
+.selected {
+  border: 1px solid #d6dbf5;
+  background-color: #d6dbf5;
 }
 
 .deselected {
@@ -90,18 +98,18 @@ button {
 }
 
 .right {
+  border: 1px solid #94d7a2;
   background-color: #94d7a2;
-  border: none;
 }
 
 .wrong {
   background-color: #f8bcbc;
+  border: 1px solid #f8bcbc;
   color: #8489a1;
-  border: none;
 }
 
 .check-btn {
-  margin: 10px 0;
+  margin: 20px 0;
   align-self: center;
   font-weight: 600;
   font-size: 13px;
