--- a/src/main.css
+++ b/src/main.css
@@ -14,6 +14,7 @@ body {
 
 h1 {
   font-family: "Karla", sans-serif;
+  font-size: 50px;
   font-weight: 700;
   margin: 10px;
 }
@@ -27,6 +28,7 @@ h3 {
   height: 52px;
   border-radius: 15px;
   font-family: "Inter", sans-serif;
+  font-size: 14px;
   font-weight: 500;
   background-color: #4d5b9e;
   color: #f5f7fb;
@@ -38,7 +40,7 @@ h3 {
 .start-container {
   text-align: center;
   margin: auto;
-  height: 40%;
+  height: 35%;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -113,6 +115,20 @@ h3 {
   align-self: center;
   font-weight: 600;
   font-size: 13px;
+}
+
+.blob-blue {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: -10;
+}
+
+.blob-yellow {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: -10;
 }
 
 @media screen and (min-width: 768px) {
